# django-uaa

./: .buildinfo  .dockerignore  .gitignore  .readthedocs.yaml  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  MANIFEST.in  README.md  README.rst  RELEASE.md  backends.html  developing.html  genindex.html  index.html  mypy.ini  objects.inv  publish.sh  pyproject.toml  quickstart.html  requirements-dev.txt  requirements-rtd.txt  requirements-tests.txt  search.html  searchindex.js  setup.cfg  setup.py  test.py  tox.ini
.circleci/: config.yml
_sources/: developing.rst.txt  index.rst.txt  quickstart.rst.txt
ci/: pipeline.yml  prepare-release.sh  prepare-release.yml  run-tests.sh  run-tests.yml  test-release.sh  test-release.yml
docs/: Makefile  backends.md  backends.rst  conf.py  decorators.md  decorators.rst  developing.md  developing.rst  index.md  index.rst  make.bat  quickstart.md  quickstart.rst
example/: manage.py
example/example/: settings.py  urls.py
example/example/templates/: index.html
example/example/templates/uaa_client/: oauth2_error.html
uaa_client/: __init__.py  apps.py  authentication.py  compat.py  configuration.py  decorators.py  fake_uaa_provider.py  middleware.py  runtests.py  urls.py  views.py
uaa_client/fake_uaa_provider/: urls.py  views.py
uaa_client/fake_uaa_provider/templates/fake_uaa_provider/: base.html  index.html
uaa_client/templates/uaa_client/fake_uaa_provider/: base.html  index.html
uaa_client/tests/: test_authentication.py  test_compat.py  test_configuration.py  test_decorators.py  test_docs.py  test_example_app.py  test_middleware.py  test_views.py  urls.py
uaa_client/tests/templates/uaa_client/: logged_out.html  login_error.html  oauth2_error.html
