[build-system]
requires = [ "setuptools >= 35.0.2", "wheel >= 0.29.0"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.?venv
    | _build
    | buck-out
    | build
    | dist
  )/
)
'''

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py3{8,9,10,11,12,13}-django{40,41,42}
isolated_build=true

[testenv:py3{8,9,10,11,12,13}]
deps =
    -rrequirements-tests.txt
    -rrequirements-dev.txt
    django40: Django>=4.0,<4.1
    django41: Django>=4.1,<4.2
    django42: Django>=4.2,<4.3
commands =
    python -m uaa_client.runtests
    python -m mypy uaa_client
"""
