[metadata]
name = cg-django-uaa
version = attr: uaa_client.VERSION
description = A cloud.gov UAA authentication backend for Django
long_description = file: README.md, CHANGELOG.md, LICENSE.md
long_description_content_type = text/markdown
url = https://github.com/cloud-gov/cg-django-uaa
license = CC0 1.0
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Web Environment
    Framework :: Django
    Intended Audience :: Developers
    License :: CC0 1.0 Universal (CC0 1.0) Public Domain Dedication
    Operating System :: OS Independent
    Programming Language :: Python
    Topic :: Software Development :: Libraries :: Python Modules
    Programming Language :: Python
    Programming Language :: Python :: 3
    Topic :: Utilities

[options]
zip_safe = False
include_package_data = True
package_dir =
    uaa_client = uaa_client
packages = find:
install_requires =
    django>=4.0,<5.0
    PyJWT>=2.4.0
    requests>=2.11.0

[options.packages.find]
exclude =
    uaa_client.tests
